# pipes-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linter.yml  pull_request_tests.yml
deployment/: Dockerfile
pipes/: app.py
pipes/accessgroups/: manager.py  routes.py  schemas.py
pipes/catalogdatasets/: manager.py  routes.py  schemas.py
pipes/catalogmodels/: manager.py  routes.py  schemas.py
pipes/catalogmodels/default/: schemas.py
pipes/catalogmodels/ifac/: schemas.py
pipes/common/: constants.py  utilities.py
pipes/config/: logging.py  settings.py
pipes/datasets/: manager.py  validators.py
pipes/db/: abstract.py  document.py  dynamo.py  manager.py
pipes/handoffs/: routes.py  validators.py
pipes/health/: routes.py
pipes/modelruns/: contexts.py  manager.py  routes.py  validators.py
pipes/models/: contexts.py  manager.py  routes.py
pipes/projectruns/: contexts.py  routes.py
pipes/projects/: contexts.py  manager.py  routes.py  validators.py
pipes/tasks/: manager.py  schemas.py  validators.py
pipes/teams/: schemas.py
pipes/users/: auth.py
scripts/: import_project.py
tests/: conftest.py
tests/integration/auth/: test_auth.py
tests/unit/users/: test_routes.py
