[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipes-api"
dynamic = ["version"]
description = "PIPES API for managing datasets, models, and project workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NLR PIPES Team"}
]

dependencies = [
    "async-timeout==5.0.1",
    "beanie==1.30.0",
    "boto3==1.40.68",
    "cryptography==46.0.4",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "pydantic-settings==2.12.0",
    "pymongo==4.15.3",
    "python-dateutil==2.9.0",
    "python-jose==3.5.0",
    "requests==2.32.5",
    "shortuuid==1.0.13",
    "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pre-commit==4.2.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytz==2024.2",
    "tox==4.12.1",
    "types-requests==2.32.0.20241016",
]

[project.urls]
Homepage = "https://github.com/nrel-pipes/pipes-api"
Repository = "https://github.com/nrel-pipes/pipes-api.git"

[tool.setuptools]
packages = ["pipes"]

[tool.setuptools.dynamic]
version = {attr = "pipes.version.__version__"}
